        items list. In this case, the item text and value will be identical.

      - Refactored ListWidget and RadioWidget so they share code; they both
        inherit from SingleItemsWidget now.

      - Added LinesField to submit a list of lines in a textarea.

      - Added MultiListField and MultiCheckBoxField, both use new
        MultiItemsWidget and MultiSelectionValidator.

    Bugs Fixed

  0.9.4

    Features Added

      - Added API docs for Form, BasicForm and ZMIForm.
 
      - Renamed the confusingly named PythonForm and PythonField to
        ZMIForm and ZMIField, as they are used from the Zope Management
        Interface and not from Python.

      - Added render() method to form for basic form rendering.

      - Added Formulator HOWTO document.

    Bugs Fixed

      - Removed some validation code that wasn't in use anymore (items_method).

      - Removed 'has_field_id' in Form as this duplicated
        the functionality of 'has_field'.

      - Turned <br> in Python sources to <br /> for XHTML compliance.

      - Tweaked radiobutton; text is now closer to the button itself,
        different buttons are further apart.

  0.9.3

    Features Added
      
      - added RadioField for simple display of radio buttons.

      - added action, method and enctype property to form settings.
        These are displayed using the special form.header() and form.footer()
        methods.
 
      - added override tab to allow all properties to be overridden by
        method calls instead. 'items_method' in ListField went
        away.

      - added ability to display DateTimeFields using drop down lists
        instead of text input. Added some other bells and whistles to
        DateTimeField. Changed some of the inner workings of composite
        fields; component fields are now unique per field instance
        instead of shared between them.
 
      - is_required() utility method on field to check whether a field
        is required.
